--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "Other"
   ],
   "activationEvents": [
-    "workspaceContains:src/vs/loader.js"
+    "workspaceContains:package.json"
   ],
   "workspaceTrust": {
     "request": "onDemand",
