--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "Other"
   ],
   "activationEvents": [
-    "workspaceContains:package.json"
+    "workspaceContains:angular.json"
   ],
   "workspaceTrust": {
     "request": "onDemand",
@@ -78,6 +78,7 @@
     "postinstall": "vscode-dts main && vscode-dts dev"
   },
   "devDependencies": {
+    "@types/jasmine": "^5.1.4",
     "@types/node": "^18.11.11",
     "@types/split2": "^3.2.1",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
@@ -95,6 +96,7 @@
     "@jridgewell/trace-mapping": "^0.3.17",
     "ansi-styles": "^6.2.1",
     "istanbul-to-vscode": "^2.0.1",
+    "jasmine": "^5.1.0",
     "js-base64": "^3.7.3",
     "split2": "^4.1.0",
     "typescript": "^4.9.3"
