--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vscode-selfhost-test-provider",
   "displayName": "VS Code Selfhost Test Provider",
-  "description": "Test provider for the VS Code project",
+  "description": "Test provider for the VS Code project. Based heavily on the original vscode-selfhost-test-provider extension, adapted for angular.",
   "enabledApiProposals": [
     "testObserver"
   ],
@@ -37,12 +37,12 @@
   },
   "icon": "icon.png",
   "version": "0.4.0",
-  "publisher": "ms-vscode",
+  "publisher": "Duncan McPherson",
   "engines": {
     "vscode": "^1.88.0"
   },
   "categories": [
-    "Other"
+    "Testing"
   ],
   "activationEvents": [
     "workspaceContains:angular.json"
@@ -60,14 +60,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/microsoft/vscode-selfhost-test-provider.git"
+    "url": "https://github.com/duncanmcpherson/vscode-test-runner.git"
   },
-  "author": "Connor Peet <connor@peet.io>",
+  "author": "Duncan McPherson",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/microsoft/vscode-selfhost-test-provider/issues"
+    "url": "https://github.com/duncanmcpherson/vscode-test-runner/issues"
   },
-  "homepage": "https://github.com/microsoft/vscode-selfhost-test-provider#readme",
+  "homepage": "https://github.com/duncanmcpherson/vscode-test-runner#readme",
   "scripts": {
     "vscode:prepublish": "npm run package",
     "compile": "webpack --config ./build/node-extension.webpack.config.js",
@@ -78,11 +78,12 @@
     "postinstall": "vscode-dts main && vscode-dts dev"
   },
   "devDependencies": {
-    "@types/jasmine": "^5.1.4",
     "@types/node": "^18.11.11",
     "@types/split2": "^3.2.1",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
+    "@vscode/test-cli": "^0.0.9",
+    "@vscode/test-electron": "^2.3.10",
     "eslint": "^8.29.0",
     "eslint-plugin-header": "^3.1.1",
     "prettier": "^2.8.1",
@@ -96,7 +97,6 @@
     "@jridgewell/trace-mapping": "^0.3.17",
     "ansi-styles": "^6.2.1",
     "istanbul-to-vscode": "^2.0.1",
-    "jasmine": "^5.1.0",
     "js-base64": "^3.7.3",
     "split2": "^4.1.0",
     "typescript": "^4.9.3"
